@@ -1,8 +1,9 @@
 brot2 (0.2) UNRELEASED; urgency=low
 
   * LP#783038: Replace deprecated calls to gtk_signal_connect(_object)
+  * Makefile: Set USE_CCACHE=yes to have the obvious effect.
 
- -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Wed, 18 May 2011 22:28:39 +0100
+ -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Thu, 19 May 2011 19:01:00 +0100
 
 brot2 (0.1) natty; urgency=low
 
